src/components/Projects/Projects.css
.projects {
  width: 100vw;
  padding-top: 8%;
  display: flex;
}

.project-image {
  height: 340px;
  width: 530px;
}

.project-description {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.projects-section-one {
  display: flex;
  padding-right: 60px;
  width: 100vw;
  /* overflow-x: hidden; */
  overflow: scroll;
}

.projects figure {
  position: relative;
  overflow: hidden;
  margin: 10px 10px;
  min-width: 320px;
  /* max-width: 380px;
  max-height: 215px; */
  background: black;
  text-align: center;
  cursor: pointer;
  max-width: 580px;
  max-height: 340px;
}

.projects figure figcaption {
  color: #ffffff;
  text-transform: uppercase;
  font-size: 17px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.projects figure figcaption::before,
.projects figure figcaption::after {
  pointer-events: none;
}

.projects figure figcaption,
.projects figure figcaption > a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

figure.effect img {
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
}

figure.effect:hover img {
  opacity: 0.5;
}

figure.effect figcaption::before {
  position: absolute;
  top: 30px;
  right: 30px;
  bottom: 30px;
  left: 30px;
  border: 1px solid #ffffff;
  content: "";
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

figure.effect figcaption::before,
figure.effect button {
  opacity: 0;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
  transition: opacity 0.35s, transform 0.35s;
}

figure.effect button.live-project {
  margin-top: 125px;
  text-align: center;
  -webkit-transform: scale(1.5);
  transform: scale(1.5);
  cursor: pointer;
}

figure.effect button.source-code {
  margin-top: 95px;
  text-align: center;
  -webkit-transform: scale(1.5);
  transform: scale(1.5);
  cursor: pointer;
}

figure.effect button {
  margin-top: -15px;
  text-align: center;
  -webkit-transform: scale(1.5);
  transform: scale(1.5);
}

figure.effect:hover figcaption::before,
figure.effect:hover button {
  opacity: 1;
  -webkit-transform: scale(1);
  transform: scale(1);
}

/* @media screen and (max-width: 50em) {
  .content {
    padding: 0 10px;
    text-align: center;
  }
  .projects figure {
    display: inline-block;
    float: none;
    margin: 10px auto;
    width: 100%;
  }
} */

.projects-button-two {
  margin-top: -70px;
}

.projects-button-two-hangman {
  margin-top: 60px;
}

button {
  width: 150px;
  height: 30px;
  color: grey;
  background-color: #ffffff;
  border: 1px solid lightgray;
}

.arrow {
  width: 4rem;
  height: 5rem;
}

.arrow-button {
  width: 4rem;
  height: 5rem;
  margin-left: 25px;
  border: none;
  overflow: visible;
  transition: 0.6s ease;
  background: none;
}

.arrow-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 40px;
}

.arrow-button-right {
  width: 4rem;
  height: 5rem;
  margin-left: 25px;
  border: none;
  overflow: visible;
  transition: 0.6s ease;
  /* z-index: 1; */
  background: none;
}

.card {
  border: 1px solid gray;
  box-shadow: 0 0 10px 0;
  width: 570px;
  height: 420px;
  padding: 5px;
  background-color: #ebe9e7;
  margin-left: 50px;
  /* animation: slide 40s infinite;
  animation-direction: alternate-reverse; */
  position: relative;
}

.card-one {
  border: 1px solid gray;
  box-shadow: 0 0 10px 0;
  width: 570px;
  height: 420px;
  padding: 5px;
  background-color: #ebe9e7;
  margin-left: 5px;
  /* animation: slide 40s infinite;
  animation-direction: alternate-reverse; */
  position: relative;
}

/* @keyframes slide {
  0% {
    transform: translateX(30px);
  }
  25% {
    transform: translateX(-600px);
  }
  50% {
    transform: translateX(-1000px);
  }
  75% {
    transform: translateX(-1400px);
  }
  100% {
    transform: translateX(-1850px);
  }
} */

.project-description {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 17px;
}

a:link {
  text-decoration: none;
}

.loading {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  letter-spacing: 3px;
  padding-top: 120px;
  color: white;
}

.loading-two {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  letter-spacing: 3px;
  color: white;
}

.loading-soon {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  letter-spacing: 3px;
  padding-top: 140px;
}

